@@ -6,15 +6,19 @@
 * within this branch: vcgs-dev 
 *
 /********************************************************
-/ 2016-12-09  13:00 
+/ 2016-12-09 13:00 
 /********************************************************
 - vcfanno step and tool (vcfs not included in commit)
 - some configuration changes (vcgs specific)
 - filter_transcripts.py bug fix (included in 2.4)
 /********************************************************
-/ 2016-12-09  14:49 
+/ 2016-12-09 14:49 
 /********************************************************
 - added perl 5.22.1 folder to tools for reference
 - updated perl references in pipeline 
+/********************************************************
+/ 2016-12-15 10:36 
+/********************************************************
+- additional dbnsfp fields, remove redundant exac/1000g fields
 
 
